major UI changes

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div *ngIf="this.isLoggedIn">
-    <p>We are logged in</p>
-</div>
-<router-outlet></router-outlet>
+<router-outlet>
+</router-outlet>
