--- a/frontend/src/app/campaign-create/campaign.component.html
+++ b/frontend/src/app/campaign-create/campaign.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div>
     <label for="name">Campaign name: </label>
     <input id="name" [(ngModel)]="campaign.name" placeholder="name">
