--- a/frontend/src/app/login-form/login-form.component.html
+++ b/frontend/src/app/login-form/login-form.component.html
@@ -1,7 +1,30 @@
-<div>
-    <label for="username">Username </label>
-    <input id="username" [(ngModel)]="username" placeholder="Username">
-    <label for="password">Password </label>
-    <input id="password" type="password" autocomplete="off" [(ngModel)]="password" placeholder="password">
-    <a class="btn btn-primary"(click)="login()">Login</a>
-</div>
+<div class="container-fluid">
+    <h3>Login</h3>
+    <div class="card form-group mt-5">
+        <div class="card-body">
+            <div class="input-group mb-2">
+                <span class="input-group-prepend">
+                    <span class="btn btn-outline-secondary bg-white border-start-1 border-bottom-1 border-end-0 border ms-n5">
+                        <i class="fa fa-user"></i>
+                    </span>
+                </span>
+                <input class="form-control border-start-0 border-end-1 border" [(ngModel)]="username" placeholder="username">
+            </div>
+            <div class="input-group">
+                <span class="input-group-prepend">
+                    <span class="btn btn-outline-secondary bg-white border-start-1 border-bottom-1 border-end-0 border ms-n5">
+                        <i class="fa fa-unlock-alt"></i>
+                    </span>
+                </span>
+                <input type="password" class="form-control border-start-0 border-end-1 border" [(ngModel)]="password" placeholder="Password">
+            </div>
+            <!--<label for="username">Username </label>
+            <input id="username" class="form-control" [(ngModel)]="username" placeholder="Username">
+            <label for="password">Password </label>
+            <input id="password" class="form-control" type="password" autocomplete="off" [(ngModel)]="password" placeholder="password"> -->
+        <div class="container-fluid text-center mt-3">
+            <a class="btn btn-primary"(click)="login()">Login</a>      
+        </div>
+            </div>
+        </div>
+    </div>
