--- a/frontend/src/app/campaign-detail/campaign-detail.component.html
+++ b/frontend/src/app/campaign-detail/campaign-detail.component.html
@@ -18,35 +18,39 @@
             <p>{{campaign.description}}</p>
             <p><span style="color:dimgrey"><i class="fa fa-info-circle"></i></span> You can access the links of this campaign, by going to http://192.168.1.41/{{campaign.representationLink}}</p>
             <p>This campaign has <b>{{campaignLinks.length}}</b> links </p>
+            <div *ngIf="edit"class="card-footer">
+              <p *ngIf="edit"> </p>
+
+              <!--edit div-->
+              <div class="container-fluid mb-2" *ngIf="edit">
+                 <label for="name">Campaign name: </label>
+                 <input class="form-control" id="name" [(ngModel)]="campaign.name" placeholder="name">
+                 <label for="description">Description: </label>
+                 <input class="form-control" id="description" [(ngModel)]="campaign.description" placeholder="description">
+                 <label for="links">Links: </label>
+                 <div class="form-group" *ngFor="let x of campaignLinks; let i = index;trackBy:trackByIdx">
+                   <div class="input-group">
+                    <input class="form-control" type="text" [(ngModel)]="campaignLinks[i]">
+                    <a class="btn btn-outline-danger mr-2"(click)="deleteCampaignLink(i)"><i class="fa fa-trash"></i></a>
+                   </div>
+                  </div>
+                  <div class="input-group">
+                    <input class="form-control" id="link" [(ngModel)]="tempLink" placeholder="Add a new link">
+                    <a class="btn btn-outline-primary mr-2" (click)="addNewLink()"><i class="fa fa-plus"></i></a>
+                   </div>
+                   
+                 <a class="btn btn-primary mt-2"(click)="saveCampaign()"><i class="fa fa-save"></i> Save</a><span>&nbsp;</span>
+                 <a class="btn btn-danger mt-2"(click)="closeEdit()"><i class="fa fa-window-close"> </i> Close</a>
+                 </div>
+           </div> 
+
+
             <a *ngIf="edit==false" class="btn btn-primary"(click)="editCampaign()"><i class="fa fa-wrench"></i> Edit</a> 
             <span>&nbsp;</span>
             <a *ngIf="edit==false" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" class="btn btn-danger"><i class="fa fa-trash"></i> Delete</a>
-         </div>
+            <app-stats></app-stats>
+          </div>
 
-         <!--Edit div-->
-         <div *ngIf="edit"class="card-footer">
-            <p *ngIf="edit"> </p>
-            <div class="container-fluid mb-2" *ngIf="edit">
-               <label for="name">Campaign name: </label>
-               <input class="form-control" id="name" [(ngModel)]="campaign.name" placeholder="name">
-               <label for="description">Description: </label>
-               <input class="form-control" id="description" [(ngModel)]="campaign.description" placeholder="description">
-               <label for="links">Links: </label>
-               <div class="form-group" *ngFor="let x of campaignLinks; let i = index;trackBy:trackByIdx">
-                 <div class="input-group">
-                  <input class="form-control" type="text" [(ngModel)]="campaignLinks[i]">
-                  <a class="btn btn-outline-danger mr-2"(click)="deleteCampaignLink(i)"><i class="fa fa-trash"></i></a>
-                 </div>
-                </div>
-                <div class="input-group">
-                  <input class="form-control" id="link" [(ngModel)]="tempLink" placeholder="Add a new link">
-                  <a class="btn btn-outline-primary mr-2" (click)="addNewLink()"><i class="fa fa-plus"></i></a>
-                 </div>
-                 
-               <a class="btn btn-primary mt-2"(click)="saveCampaign()"><i class="fa fa-save"></i> Save</a><span>&nbsp;</span>
-               <a class="btn btn-danger mt-2"(click)="closeEdit()"><i class="fa fa-window-close"> </i> Close</a>
-               </div>
-         </div>
 
          <!--Delete modal div-->
          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
